# ros_training

./: .gitignore  Makefile  README.md
config/: .bash_aliases  .rosinstall  dependencies_apt.txt  install_arduino.sh  set_master.bash  setup_laptop.bash
html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
html/_sources/: index.rst.txt
html/_sources/day1/: clearbot_teleop.rst.txt  index.rst.txt  ros_intro.rst.txt  ubuntu_filesystem.rst.txt  ubuntu_gui.rst.txt  ubuntu_shell.rst.txt  welcome_system_setup.rst.txt
html/_sources/day2/: ar_tracker.rst.txt  catkin_workspace.rst.txt  index.rst.txt  messages.rst.txt  node.rst.txt  services.rst.txt
html/_sources/day3/: hardware_driver.rst.txt  index.rst.txt  workshop_1.md.txt  workshop_2.rst.txt
html/_sources/day4/: 2d_slam.rst.txt  advanced.rst.txt  (+3 more)
html/day1/: clearbot_teleop.html  index.html  linux_shell.html  linux_shell_intro.html  ros_intro.html  ubuntu_filesystem.html  ubuntu_gui.html  ubuntu_shell.html  welcome_system_setup.html  workshop.html
html/day2/: ar_tracker.html  catkin_package.html  catkin_workspace.html  index.html  launch.html  messages.html  node.html  parameters.html  ros_intro.html  services.html
html/day3/: hardware_driver.html  index.html  workshop_1.html  workshop_2.html
html/day4/: 2d_slam.html  3dmap.html  advanced.html  index.html  mappinginsim.html  navigation.html  transforms.html
html/day5/: index.html  move_group_interface.html  moveit.html  moveit_config.html  multirobot_mp.html  urdf.html
html/setup/: clearbot_ws_setup.html  system_setup.html
html/template/: included.html  template.html
resources/dual_manipulator_support/: CMakeLists.txt  package.xml
resources/linux_intro/: sample_job
resources/my_robot_description/: package.xml
resources/sonar_driver/: .travis.yml  CMakeLists.txt  package.xml
resources/sonar_driver/config/: default_plugin_config.rviz
resources/sonar_driver/include/sonar_driver/: packet_parser.h  sonar_driver_dataframe.h
resources/sonar_driver/launch/: sonar_driver.launch
resources/sonar_driver/msg/: RangeImu.msg
resources/sonar_driver/sonar_firmware/dummy_data_generator/: dummy_data_generator.ino
resources/sonar_driver/src/: packet_parser.cpp  sonar_hardware_client_node.cpp
resources/sonar_driver/src/test/: packet_parser_test.cpp
resources/sonar_driver/srv/: SetSonarRange.srv
resources/sonar_driver/test/: test_packet_parser.test
source/: conf.py  index.rst
source/day1/: index.rst  linux_shell.rst  ubuntu_filesystem.rst  ubuntu_gui.rst  ubuntu_shell.rst
source/day2/: ar_tracker.rst  catkin_package.rst  index.rst  launch.rst  messages.rst  node.rst  parameters.rst  services.rst
source/day3/: hardware_driver.rst  index.rst  workshop_1.md
source/day4/: 2d_slam.rst  3dmap.rst  index.rst  mappinginsim.rst  navigation.rst  transforms.rst
source/day5/: index.rst  move_group_interface.rst  moveit.rst  moveit_config.rst  urdf.rst
source/setup/: system_setup.rst
(+74 files in other folders)
